--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@ document.getElementById('F').addEventListener('submit',async function(e){
     /* Fire and forget — no-cors gives opaque response anyway */
     fetch(GOOGLE_SCRIPT_URL,{method:'POST',mode:'no-cors',headers:{'Content-Type':'text/plain;charset=utf-8'},body:payload}).catch(function(){});
     /* Hide form cards, show success */
-    document.querySelectorAll('.card').forEach(function(c){c.style.display='none'});
+    console.log('STEP1: Hiding cards');document.querySelectorAll('.card').forEach(function(c){c.style.display='none'});console.log('STEP2: Cards hidden');
     document.getElementById('slipName').textContent=data.full_name||'';
     document.getElementById('slipRef').textContent=data.reference_id;
     document.getElementById('slipDate').textContent=new Date().toLocaleDateString('en-IN',{day:'numeric',month:'short',year:'numeric',hour:'2-digit',minute:'2-digit'});
     window._slipData={name:data.full_name||'',ref:data.reference_id,date:new Date().toLocaleDateString('en-IN',{day:'numeric',month:'short',year:'numeric'})};
-    document.getElementById('successBox').classList.add('show');
+    console.log('STEP3: Adding show class');document.getElementById('successBox').classList.add('show');console.log('STEP4: Show class added, display:', document.getElementById('successBox').style.display, getComputedStyle(document.getElementById('successBox')).display);
     document.getElementById('successBox').scrollIntoView({behavior:'smooth',block:'start'});
     document.querySelectorAll('.st').forEach(s=>s.classList.add('done'));
     document.querySelectorAll('.st-con .st-line').forEach(l=>l.style.background='var(--green)');
@@ -391,8 +391,8 @@ document.getElementById('F').addEventListener('submit',async function(e){
     console.error('Submit error:',err);
     /* Even if error — still show success since data was already sent */
     try{
-      document.querySelectorAll('.card').forEach(function(c){c.style.display='none'});
-      document.getElementById('successBox').classList.add('show');
+      console.log('STEP1: Hiding cards');document.querySelectorAll('.card').forEach(function(c){c.style.display='none'});console.log('STEP2: Cards hidden');
+      console.log('STEP3: Adding show class');document.getElementById('successBox').classList.add('show');console.log('STEP4: Show class added, display:', document.getElementById('successBox').style.display, getComputedStyle(document.getElementById('successBox')).display);
       document.getElementById('successBox').scrollIntoView({behavior:'smooth',block:'start'});
       document.querySelectorAll('.st').forEach(s=>s.classList.add('done'));
       confetti();
